...

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/location_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/location_name_text_size"
        app:layout_constraintBottom_toTopOf="@id/detailed_day"
        app:layout_constraintEnd_toStartOf="@+id/refresh_weather_button"
        app:layout_constraintStart_toEndOf="@+id/back_button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread" />
...
        android:focusable="true"
        android:src="@drawable/thermometer"
        app:layout_constraintBottom_toTopOf="@id/description"
        app:layout_constraintEnd_toStartOf="@id/temp_degree"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintHorizontal_chainStyle="packed"
...
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintBottom_toTopOf="@id/rain_image"
        app:layout_constraintEnd_toStartOf="@+id/humidity_volume"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description" />
...
        android:layout_height="@dimen/volume_image_height"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/wind_volume"
        android:focusable="true"
        android:src="@drawable/wind"
...
        android:layout_width="@dimen/volume_image_width"
        android:layout_height="@dimen/volume_image_height"
        android:contentDescription="@string/rain_volume"
        android:focusable="true"
        android:src="@drawable/rain_volume"
...
        android:layout_height="@dimen/volume_image_height"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/snow_volume"
        android:focusable="true"
        android:src="@drawable/snow_volume"
...

    <View
        android:id="@+id/first_day_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@id/first_day_temp_degree"
        app:layout_constraintEnd_toEndOf="@id/first_day_weather_image"
        app:layout_constraintStart_toStartOf="@id/first_day_weather_image"
        app:layout_constraintTop_toTopOf="@id/first_day_date"/>

    <androidx.appcompat.widget.AppCompatTextView
...

    <View
        android:id="@+id/second_day_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@id/second_day_temp_degree"
        app:layout_constraintEnd_toEndOf="@id/second_day_weather_image"
        app:layout_constraintStart_toStartOf="@id/second_day_weather_image"
        app:layout_constraintTop_toTopOf="@id/second_day_date" />

    <androidx.appcompat.widget.AppCompatTextView
...

    <View
        android:id="@+id/third_day_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@id/third_day_temp_degree"
        app:layout_constraintEnd_toEndOf="@id/third_day_weather_image"
        app:layout_constraintStart_toStartOf="@id/third_day_weather_image"
        app:layout_constraintTop_toTopOf="@id/third_day_date" />

    <androidx.appcompat.widget.AppCompatTextView
...

    <View
        android:id="@+id/fourth_day_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@id/fourth_day_temp_degree"
        app:layout_constraintEnd_toEndOf="@id/fourth_day_weather_image"
        app:layout_constraintStart_toStartOf="@id/fourth_day_weather_image"
        app:layout_constraintTop_toTopOf="@id/fourth_day_date" />

    <androidx.appcompat.widget.AppCompatTextView
...

    <View
        android:id="@+id/fifth_day_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@id/fifth_day_temp_degree"
        app:layout_constraintEnd_toEndOf="@id/fifth_day_weather_image"
        app:layout_constraintStart_toStartOf="@id/fifth_day_weather_image"
        app:layout_constraintTop_toTopOf="@id/fifth_day_date" />

    <androidx.appcompat.widget.AppCompatTextView
...
