...

    <androidx.appcompat.widget.SearchView
        android:id="@+id/search_list_item"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:imeOptions="actionSearch|flagNoFullscreen"
        app:layout_constraintEnd_toStartOf="@+id/add_location_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/add_location_button"
        android:layout_width="@dimen/image_button_width"
...
        android:background="@drawable/add_location"
        android:contentDescription="@string/add_locations"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/weather_list_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
...
