...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/location_name"
        app:layout_constraintBottom_toTopOf="@id/weather_image"/>

    <View
        android:id="@+id/weather_temp_degree_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="@id/weather_image"
        app:layout_constraintEnd_toEndOf="@id/temp_degree"
        app:layout_constraintTop_toTopOf="@id/weather_image"
        app:layout_constraintBottom_toBottomOf="@id/weather_image"/>
...
