<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2019. Emre Üsküplü
  ~
  ~   Licensed under the Apache License, Version 2.0 (the "License");
  ~   you may not use this file except in compliance with the License.
  ~   You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~   Unless required by applicable law or agreed to in writing, software
  ~   distributed under the License is distributed on an "AS IS" BASIS,
  ~   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~   See the License for the specific language governing permissions and
  ~   limitations under the License.
  ~
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.gms.maps.MapView
        android:id="@+id/map_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </com.google.android.gms.maps.MapView>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/hint_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/map_hint_message"
        android:gravity="center"
        android:textColor="#B8B8B8"
        android:background="#FBFBFB"/>

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/back_button"
        android:layout_width="@dimen/image_button_width"
        android:layout_height="@dimen/image_button_height"
        android:layout_below="@+id/hint_message"
        android:background="@drawable/orange_button_shaped"
        android:layout_margin="10dp"
        android:contentDescription="@string/back_button"/>

</RelativeLayout>